# vcaptfx2

./: .gitignore  README.md  _config.yml
_includes/: header.html  links-list.html  sidebar.html
_layouts/: post.html
_posts/: 2015-09-26-Description.md
css/: bootstrap.min.css
host/: .gitignore  CMakeLists.txt  Makefile  Vcaptfx2Config.h  Vcaptfx2Config.h.in  colors.c  colors.h  colors.rb  command.h  compat.c  compat.h  default_config.h  fifo.c  fifo.h  fifo.h.gch  keys.c  keys.h  machine.c  machine.h  main.c  main.h  mingw32_cross-compile.cmake  no_device.h  no_signal.h  process.c  process.h  profile.c  profile.h  render.c  render.h  types.h  usb.c  usb.h  vcapt_hex.c  video.c  video.h
host/cmake/Modules/: Findlibconfig.cmake  Findlibusb-1.0.cmake
sigrok-firmware-fx2lafw/: export_fw.sh  gpif-acquisition.c
sigrok-firmware-fx2lafw/hw/cypress-fx2/: dscr.a51
sigrok-firmware-fx2lafw/include/: command.h  dscr.inc  fx2lafw.h
